fixed promo menu clipping gui, and either side being able to select promoted piece

--- a/src/index.css
+++ b/src/index.css
@@ -222,11 +222,12 @@ table {
 
 .gui {
   padding-top: 7vh;
+  margin-left: 3vw;
 }
 
 .chessboard {
   padding-top: 5vh;
-  margin-left: 10vw;
+  margin-left: 8vw;
 }
 
 .chat {
